--- a/gst-plugins-base/tools/Makefile.am
+++ b/gst-plugins-base/tools/Makefile.am
@@ -2,4 +2,4 @@ bin_SCRIPTS = gst-launch-ext gst-visualise
 
 man_MANS = gst-launch-ext.1 gst-visualise.1
 
-EXTRA_DIST = $(bin_SCRIPTS) $(man_MANS)
+EXTRA_DIST = $(bin_SCRIPTS) $(man_MANS) gst-launch-ext.in
