--- a/gst-plugins-good/gst/level/Makefile.am
+++ b/gst-plugins-good/gst/level/Makefile.am
@@ -8,10 +8,12 @@ libgstlevel_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
 noinst_HEADERS = gstlevel.h filter.func
 
+if HAVE_GTK
 noinst_PROGRAMS = demo
 demo_SOURCES = demo.c
 demo_CFLAGS = $(GTK_CFLAGS) $(GST_CFLAGS)
 demo_LDFLAGS = $(GTK_LIBS) $(GST_LIBS)
+endif
 
 EXTRA_libgstlevel_la_SOURCES = gstlevel-marshal.list
 
