--- a/gst-plugins-good/configure.ac
+++ b/gst-plugins-good/configure.ac
@@ -234,6 +234,7 @@ GTK_CFLAGS=$GTK2_CFLAGS
 GTK_LIBS=$GTK2_LIBS
 AC_SUBST(GTK_LIBS)
 AC_SUBST(GTK_CFLAGS)
+AC_SUBST(HAVE_GTK)
 
 
 dnl Check for X11 extensions
