--- a/gst-plugins-base/gst-libs/gst/media-info/Makefile.am
+++ b/gst-plugins-base/gst-libs/gst/media-info/Makefile.am
@@ -2,7 +2,7 @@ librarydir = $(libdir)
 
 library_LTLIBRARIES = libgstmedia-info-@GST_MAJORMINOR@.la
 
-libgstmedia_info_@GST_MAJORMINOR@_la_SOURCES = media-info.c
+libgstmedia_info_@GST_MAJORMINOR@_la_SOURCES = media-info.c media-info-priv.c
 
 libincludedir = $(includedir)/gstreamer-@GST_MAJORMINOR@/gst/media-info
 libinclude_HEADERS = media-info.h
@@ -11,6 +11,7 @@ libgstmedia_info_@GST_MAJORMINOR@_la_CFLAGS = $(GST_CFLAGS) $(GST_PLUGIN_CFLAGS)
 libgstmedia_info_@GST_MAJORMINOR@_la_LIBADD = $(GST_LIBS) $(GST_PLUGIN_LIBS)
 
 noinst_PROGRAMS = media-info-test
+noinst_HEADERS = media-info-priv.h
 
 media_info_test_SOURCES = media-info-test.c
 media_info_test_CFLAGS = $(GST_CFLAGS)
