--- a/gst-plugins-base/gst-libs/ext/Makefile.am
+++ b/gst-plugins-base/gst-libs/ext/Makefile.am
@@ -1,3 +1,9 @@
-SUBDIRS = ffmpeg mplex
+if USE_FFMPEG
+FFMPEG_DIR=ffmpeg
+else
+FFMPEG_DIR=
+endif
+
+SUBDIRS = $(FFMPEG_DIR) mplex
 
 DIST_SUBDIRS= ffmpeg mplex
